Day - 03 -- Header align center fixed

--- a/task/assets/sass/layout/_grid.scss
+++ b/task/assets/sass/layout/_grid.scss
@@ -10,7 +10,6 @@ $breakpoints: (
 .row{
   display:flex;
   flex-wrap: wrap;
-  align-items:center;
 }
 
 .container{
